--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,6 +1,7 @@
 @import "./base/reset";
 @import "./base/font";
 @import "./base/bg";
+@import "./base/base";
 @import "./layout/layout";
 @import "./layout/navbar";
 @import "./layout/footer";
