--- a/scss/base/_bg.scss
+++ b/scss/base/_bg.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  @media (max-width: 768px) {
+  @mixin md  {
     background: url(../images/home-header-sm.png);
     background-position: center;
     background-size: cover;
