--- a/scss/page/_index.scss
+++ b/scss/page/_index.scss
@@ -1,69 +1,61 @@
 // header
 .header {
-  height: calc(100vh - 80px); 
-  line-height: 1.5;
-  .header-wrap {
-    margin: 296px 0 296px auto;
+  @include md {
+    height: 396px;
+  }
+}
+
+
+.header-wrap {
+  margin: 296px 0 296px auto;
+  h2 {
+    font-size: 36px;
+  }
+  h1 {
+    font-size: 64px;
+    font-weight: bold;
+  }
+  button {
+    font-size: 20px;
+    margin-top: 8px;
+    padding: 6px 12px;
+    border: 0;
+  }
+  @include md {
+    width: 100%;
+    margin: 144px 0 144px auto;
     h2 {
-      font-size: 36px;
+      font-size: 16px;
     }
     h1 {
-      font-size: 64px;
+      font-size: 24px;
       font-weight: bold;
     }
     button {
       font-size: 20px;
-      margin-top: 8px;
       padding: 6px 12px;
-      border: 0;
-    }
-  }
-  // @media (max-width: 768px) {
-  //   height: 787px;
-  //   .header-wrap {
-  //     width: 100%;
-  //     margin: 296px 0 296px auto;
-  //     h2 {
-  //       font-size: 36px;
-  //     }
-  //     h1 {
-  //       font-size: 64px;
-  //       font-weight: bold;
-  //     }
-  //     button {
-  //       font-size: 20px;
-  //       margin-top: 8px;
-  //       padding: 6px 12px;
-  //       border: 0;
-  //     }
-  //   }
-  // }
-  @media (max-width: 768px) {
-    height: 396px; 
-    .header-wrap {
-      width: 100%;
-      margin: 144px 0 144px auto;
-      h2 {
-        font-size: 16px;
-      }
-      h1 {
-        font-size: 24px;
-        font-weight: bold;
-      }
-      button {
-        font-size: 20px;
-        padding: 6px 12px;
-      }
     }
   }
 }
+
+
+
+// section-2
 
 .section-2-img {
   width: 83px;
 }
 
 
+// section-5
 
+.section-5-card {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 2px 6px #00000029;
+  border: 1px solid #DEE2E6;
+  border-radius: 4px;
+  opacity: 1;
+}
 
 // section-6
 .index-form-btn {
@@ -87,7 +79,7 @@
   width: 48px;
   height: 48px;
   font-size: 36px !important;
-  @media (max-width: 768px) {
+  @include md {
     width: 24px;
     height: 24px;
     font-size: 24px !important;
@@ -96,15 +88,4 @@
 
 
 
-.footer-ic-social {
-  width: 40px;
-  height: 40px;
-  @media (max-width: 768px) {
-    width: 24px;
-    height: 24px;
-  }
-}
 
-.border-top-white {
-  border-top: 1px solid #fff;
-}
