--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -3,7 +3,7 @@ $black:    #000 !default;
 $gary:     #707070 !default;
 $primary:       #aa0601  !default;
 $secondary:     #650300 !default;
-* {
+.test {
   outline: 1px solid rgb(96, 219, 116);
 }
 .h-100 {
