--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -3,12 +3,328 @@ $black:    #000 !default;
 $gary:     #707070 !default;
 $primary:       #aa0601  !default;
 $secondary:     #650300 !default;
+
+$max: 20;
 .test {
   outline: 1px solid rgb(96, 219, 116);
 }
 .h-100 {
   height: 100%;
 }
+// margin
+@for $i from 0 through $max {
+  .m-#{$i} {
+    margin: $i * 4px;
+  }
+  @include lg {
+    .m-lg-#{$i} {
+      margin: $i * 4px;
+    }
+  }
+  @include md {
+    .m-md-#{$i} {
+      margin: $i * 4px;
+    }
+  }
+  @include sm {
+    .m-sm-#{$i} {
+      margin: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .mt-#{$i} {
+    margin-top: $i * 4px;
+  }
+  @include lg {
+    .mt-lg-#{$i} {
+      margin-top: $i * 4px;
+    }
+  }
+  @include md {
+    .mt-md-#{$i} {
+      margin-top: $i * 4px;
+    }
+  }
+  @include sm {
+    .mt-sm-#{$i} {
+      margin-top: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .mb-#{$i} {
+    margin-bottom: $i * 4px;
+  }
+  @include lg {
+    .mb-lg-#{$i} {
+      margin-bottom: $i * 4px;
+    }
+  }
+  @include md {
+    .mb-md-#{$i} {
+      margin-bottom: $i * 4px;
+    }
+  }
+  @include sm {
+    .mb-sm-#{$i} {
+      margin-bottom: $i * 4px;
+    }
+  }
+  
+}
+@for $i from 0 through $max {
+  .ms-#{$i} {
+    margin-left: $i * 4px;
+  }
+  @include lg {
+    .ms-lg-#{$i} {
+      margin-left: $i * 4px;
+    }
+  }
+  @include md {
+    .ms-md-#{$i} {
+      margin-left: $i * 4px;
+    }
+  }
+  @include sm {
+    .ms-sm-#{$i} {
+      margin-left: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .me-#{$i} {
+    margin-right: $i * 4px;
+  }
+  @include lg {
+    .me-lg-#{$i} {
+      margin-right: $i * 4px;
+    }
+  }
+  @include md {
+    .me-md-#{$i} {
+      margin-right: $i * 4px;
+    }
+  }
+  @include sm {
+    .me-sm-#{$i} {
+      margin-right: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .mx-#{$i} {
+    margin-left: $i * 4px;
+    margin-right: $i * 4px;
+  }
+  @include lg {
+    .mx-lg-#{$i} {
+      margin-left: $i * 4px;
+      margin-right: $i * 4px;
+    }
+  }
+  @include md {
+    .mx-md-#{$i} {
+      margin-left: $i * 4px;
+      margin-right: $i * 4px;
+    }
+  }
+  @include sm {
+    .mx-sm-#{$i} {
+      margin-left: $i * 4px;
+      margin-right: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .my-#{$i} {
+    margin-top: $i * 4px;
+    margin-bottom: $i * 4px;
+  }
+  @include lg {
+    .my-lg-#{$i} {
+      margin-top: $i * 4px;
+      margin-bottom: $i * 4px;
+    }
+  }
+  @include md {
+    .my-md-#{$i} {
+      margin-top: $i * 4px;
+      margin-bottom: $i * 4px;
+    }
+  }
+  @include sm {
+    .my-sm-#{$i} {
+      margin-top: $i * 4px;
+      margin-bottom: $i * 4px;
+    }
+  }
+}
+// padding
+@for $i from 0 through $max {
+  .p-#{$i} {
+    padding: $i * 4px;
+  }
+  @include lg {
+    .p-lg-#{$i} {
+      padding: $i * 4px;
+    }
+  }
+  @include md {
+    .p-md-#{$i} {
+      padding: $i * 4px;
+    }
+  }
+  @include sm {
+    .p-sm-#{$i} {
+      padding: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .pt-#{$i} {
+    padding-top: $i * 4px;
+  }
+  @include lg {
+    .pt-lg-#{$i} {
+      padding-top: $i * 4px;
+    }
+  }
+  @include md {
+    .pt-md-#{$i} {
+      padding-top: $i * 4px;
+    }
+  }
+  @include sm {
+    .pt-sm-#{$i} {
+      padding-top: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .pb-#{$i} {
+    padding-bottom: $i * 4px;
+  }
+  @include lg {
+    .pb-lg-#{$i} {
+      padding-bottom: $i * 4px;
+    }
+  }
+  @include md {
+    .pb-md-#{$i} {
+      padding-bottom: $i * 4px;
+    }
+  }
+  @include sm {
+    .pb-sm-#{$i} {
+      padding-bottom: $i * 4px;
+    }
+  }
+  
+}
+@for $i from 0 through $max {
+  .ps-#{$i} {
+    padding-left: $i * 4px;
+  }
+  @include lg {
+    .ps-lg-#{$i} {
+      padding-left: $i * 4px;
+    }
+  }
+  @include md {
+    .ps-md-#{$i} {
+      padding-left: $i * 4px;
+    }
+  }
+  @include sm {
+    .ps-sm-#{$i} {
+      padding-left: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .pe-#{$i} {
+    padding-right: $i * 4px;
+  }
+  @include lg {
+    .pe-lg-#{$i} {
+      padding-right: $i * 4px;
+    }
+  }
+  @include md {
+    .pe-md-#{$i} {
+      padding-right: $i * 4px;
+    }
+  }
+  @include sm {
+    .pe-sm-#{$i} {
+      padding-right: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .px-#{$i} {
+    padding-left: $i * 4px;
+    padding-right: $i * 4px;
+  }
+  @include lg {
+    .px-lg-#{$i} {
+      padding-left: $i * 4px;
+      padding-right: $i * 4px;
+    }
+  }
+  @include md {
+    .px-md-#{$i} {
+      padding-left: $i * 4px;
+      padding-right: $i * 4px;
+    }
+  }
+  @include sm {
+    .px-sm-#{$i} {
+      padding-left: $i * 4px;
+      padding-right: $i * 4px;
+    }
+  }
+}
+@for $i from 0 through $max {
+  .py-#{$i} {
+    padding-top: $i * 4px;
+    padding-bottom: $i * 4px;
+  }
+  @include lg {
+    .py-lg-#{$i} {
+      padding-top: $i * 4px;
+      padding-bottom: $i * 4px;
+    }
+  }
+  @include md {
+    .py-md-#{$i} {
+      padding-top: $i * 4px;
+      padding-bottom: $i * 4px;
+    }
+  }
+  @include sm {
+    .py-sm-#{$i} {
+      padding-top: $i * 4px;
+      padding-bottom: $i * 4px;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .ms-auto {
   margin: 0 0 0 auto;
 }
@@ -16,113 +332,13 @@ $secondary:     #650300 !default;
   margin: 0 auto;
 }
 
-.px-3 {
-  padding-left: 12px;
-  padding-right: 12px;
-}
-.py-80 {
-  padding: 80px 0;
-}
-.p-16 {
-  padding: 16px;
-}
-.py-16 {
-  padding: 16px 0;
-}
-.pt-32 {
-  padding-top: 32px;
-}
-.pt-60 {
-  padding-top: 60px;
-}
-.pb-32 {
-  padding-bottom: 32px;
-}
-.mb-8 {
-  margin-bottom: 8px;
-}
-.mb-16 {
-  margin-bottom: 16px;
-}
-.mb-24 {
-  margin-bottom: 24px;
-}
-.mb-32 {
-  margin-bottom: 32px;
-}
-.mb-36 {
-  margin-bottom: 36px;
-}
-.mb-48 {
-  margin-bottom: 48px;
-}
-.mb-72 {
-  margin-bottom: 72px;
-}
-.me-4 {
-  margin-right: 4px;
-}
-.me-16 {
-  margin-right: 16px;
-}
-.me-22 {
-  margin-right: 22px;
-}
-.me-48 {
-  margin-right: 48px;
-}
-@media (max-width: 768px) {
-  .me-md-8 {
-    margin-right: 8px;
-  }
-  .me-md-10 {
-    margin-right: 10px;
-  }
-  .mb-md-8 {
-    margin-bottom: 8px;
-  }
-  .mb-md-20 {
-    margin-bottom: 20px;
-  }
-  .py-md-24 {
-    padding: 24px 0;
-  }
-  .py-md-40 {
-    padding: 40px 0;
-  }
-  .pt-md-20 {
-    padding-top: 20px;
-  }
-  .me-md-auto {
-    margin: 0 auto 0 0;
-  }
-}
 @media (max-width: 375px) {
-  .me-sm-8 {
-    margin-right: 8px;
-  }
-  .me-sm-10 {
-    margin-right: 10px;
-  }
-  .mb-sm-8 {
-    margin-bottom: 8px;
-  }
-  .mb-sm-20 {
-    margin-bottom: 20px;
-  }
-  .py-sm-24 {
-    padding: 24px 0;
-  }
-  .py-sm-40 {
-    padding: 40px 0;
-  }
-  .pt-sm-20 {
-    padding-top: 20px;
-  }
   .me-sm-auto {
     margin: 0 auto 0 0;
   }
 }
+
+
 .text-center {
   text-align: center;
 }
