--- a/scss/utils/_helpers.scss
+++ b/scss/utils/_helpers.scss
@@ -1,10 +1,3 @@
-$white:    #fff !default;
-$black:    #000 !default;
-$gary:     #707070 !default;
-$primary:       #aa0601  !default;
-$secondary:     #650300 !default;
-
-$max: 20;
 .test {
   outline: 1px solid rgb(96, 219, 116);
 }
@@ -314,17 +307,6 @@ $max: 20;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 .ms-auto {
   margin: 0 0 0 auto;
 }
@@ -332,7 +314,7 @@ $max: 20;
   margin: 0 auto;
 }
 
-@media (max-width: 375px) {
+@include sm {
   .me-sm-auto {
     margin: 0 auto 0 0;
   }
